# graft

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: build-and-test-bindings.yml  integrate-nightly-changes.yml  make-release.sh  nightly.yml  update-bindings.sh  update-bzl-module.sh  update-org_tensorflow-version.sh  update-org_tensorflow-workspace.sh  update-readme.sh
tensorflow/: BUILD  deps.bzl  example_inception_inference_test.go  saved_model.go  signature.go  signature_test.go
tensorflow/core/example/example_parser_configuration_go_proto/: BUILD  example_parser_configuration.pb.go
tensorflow/core/example/example_protos_go_proto/: BUILD  example.pb.go  feature.pb.go
tensorflow/core/framework/allocation_description_go_proto/: BUILD  allocation_description.pb.go
tensorflow/core/framework/api_def_go_proto/: BUILD  api_def.pb.go
tensorflow/core/framework/attr_value_go_proto/: BUILD  attr_value.pb.go
tensorflow/core/framework/cost_graph_go_proto/: BUILD  cost_graph.pb.go
tensorflow/core/framework/dataset_go_proto/: BUILD  dataset.pb.go
tensorflow/core/framework/dataset_metadata_go_proto/: BUILD  dataset_metadata.pb.go
tensorflow/core/framework/dataset_options_go_proto/: BUILD  dataset_options.pb.go
tensorflow/core/framework/device_attributes_go_proto/: BUILD  device_attributes.pb.go
tensorflow/core/framework/full_type_go_proto/: BUILD  full_type.pb.go
tensorflow/core/framework/function_go_proto/: BUILD  function.pb.go
tensorflow/core/framework/graph_debug_info_proto/: BUILD  graph_debug_info.pb.go
tensorflow/core/framework/graph_go_proto/: BUILD  graph.pb.go
tensorflow/core/framework/graph_transfer_info_go_proto/: BUILD  graph_transfer_info.pb.go
tensorflow/core/framework/kernel_def_go_proto/: BUILD  kernel_def.pb.go
tensorflow/core/framework/log_memory_go_proto/: BUILD  log_memory.pb.go
tensorflow/core/framework/model_go_proto/: BUILD  model.pb.go
tensorflow/core/framework/node_def_go_proto/: BUILD  node_def.pb.go
tensorflow/core/framework/op_def_go_proto/: BUILD  op_def.pb.go
tensorflow/core/framework/optimized_function_graph_go_proto/: BUILD  optimized_function_graph.pb.go
tensorflow/core/framework/reader_base_go_proto/: BUILD  reader_base.pb.go
tensorflow/core/framework/resource_handle_go_proto/: BUILD  resource_handle.pb.go
tensorflow/core/framework/step_stats_go_proto/: BUILD  step_stats.pb.go
tensorflow/core/framework/summary_go_proto/: BUILD  summary.pb.go
tensorflow/core/framework/tensor_description_go_proto/: BUILD  tensor_description.pb.go
tensorflow/core/framework/tensor_go_proto/: BUILD  tensor.pb.go
tensorflow/core/framework/tensor_shape_go_proto/: BUILD  tensor_shape.pb.go
tensorflow/core/framework/tensor_slice_go_proto/: BUILD  tensor_slice.pb.go
tensorflow/core/framework/types_go_proto/: BUILD  types.pb.go
tensorflow/core/framework/variable_go_proto/: BUILD  variable.pb.go
tensorflow/core/framework/versions_go_proto/: BUILD  versions.pb.go
tensorflow/core/profiler/profiler_options_proto_go_proto/: BUILD  profiler_options.pb.go
tensorflow/core/protobuf/for_core_protos_go_proto/: BUILD  bfc_memory_map.pb.go  cluster.pb.go  composite_tensor_variant.pb.go  config.pb.go  control_flow.pb.go  coordination_config.pb.go  core_platform_payloads.pb.go  data_service.pb.go  debug.pb.go  debug_event.pb.go  device_filters.pb.go  device_properties.pb.go  distributed_runtime_payloads.pb.go  error_codes.pb.go  fingerprint.pb.go  graph_debug_info.pb.go  meta_graph.pb.go  named_tensor.pb.go  queue_runner.pb.go  remote_tensor_handle.pb.go  rewriter_config.pb.go  rpc_options.pb.go  saved_model.pb.go  saved_object_graph.pb.go  saver.pb.go  service_config.pb.go  snapshot.pb.go  status.pb.go  struct.pb.go  tensor_bundle.pb.go  tensorflow_server.pb.go  trackable_object_graph.pb.go  transport_options.pb.go  uniform_quant_ops_attr.pb.go  verifier_config.pb.go
tensorflow/core/util/event_go_proto/: BUILD  event.pb.go
tensorflow/core/util/memmapped_file_system_proto_go_proto/: BUILD  memmapped_file_system.pb.go
tensorflow/core/util/saved_tensor_slice_proto_go_proto/: BUILD  saved_tensor_slice.pb.go
tensorflow/core/util/test_log_proto_go_proto/: BUILD  test_log.pb.go
tensorflow/op/: BUILD  gradients.go  gradients_test.go  op.go  op_test.go  scope.go  scope_test.go  wrappers.go
tensorflow/python/framework/cpp_shape_inference_go_proto/: BUILD  cpp_shape_inference.pb.go
tensorflow/tsl/protobuf/for_core_protos_go_proto/: BUILD  bfc_memory_map.pb.go  distributed_runtime_payloads.pb.go  error_codes.pb.go  histogram.pb.go  rpc_options.pb.go  status.pb.go  test_log.pb.go
tools/build_defs/repo/: BUILD  embedded.bzl  http.bzl  http.md
tools/conditions/: BUILD
tools/genop/: BUILD  main.go
tools/genop/internal/: BUILD  api_def_map.go  genop.go  genop_test.go  lib.go
tools/genproto/: BUILD
tools/graft_package/: BUILD  libtensorflow_graft_hello.go  libtensorflow_graft_test.sh
tools/graft_package/overlay/: BUILD
tools/lib_package/: BUILD  README.md  libtensorflow_go_test.sh
(+14 files in other folders)
