module(
    name = "com_github_wamuir_graft",
    version = "0.0.0",
)

# Dependencies
bazel_dep(
    name = "rules_go",
    version = "0.43.0",
    repo_name = "io_bazel_rules_go",
)
single_version_override(
    module_name = "rules_go",
    patch_strip = 1,
    patches = ["//third_party/com_github_bazelbuild_rules_go:rules_go.patch"],
    version = "0.43.0",
)

# Extensions
tf_repos = use_extension(
    "//third_party/org_tensorflow:workspace.bzl",
    "download_tf_repositories",
)
use_repo(
    tf_repos,
    "libtensorflow_linux_x86_64_cpu",
    "libtensorflow_linux_x86_64_gpu",
    "libtensorflow_macos_x86_64_cpu",
    "libtensorflow_proto_linux_x86_64_cpu",
    "libtensorflow_proto_linux_x86_64_gpu",
    "libtensorflow_proto_macos_x86_64_cpu",
    "tensorflow_base_api_def",
    "tensorflow_go",
)

go_deps = use_extension("//tensorflow:deps.bzl", "go_dependencies")
use_repo(go_deps, "org_golang_google_protobuf")

# Dev dependencies
bazel_dep(
    name = "bazel_skylib",
    version = "1.4.2",
    dev_dependency = True,
)
bazel_dep(
    name = "gazelle",
    version = "0.34.0",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)
single_version_override(
    module_name = "gazelle",
    patch_strip = 1,
    patches = ["//third_party/com_github_bazelbuild_bazel-gazelle:bazel-gazelle.patch"],
    version = "0.34.0",
)

bazel_dep(
    name = "platforms",
    version = "0.0.7",
    dev_dependency = True,
)
bazel_dep(
    name = "protobuf",
    version = "21.7",
    dev_dependency = True,
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_pkg",
    version = "0.9.1",
    dev_dependency = True,
)
bazel_dep(
    name = "stardoc",
    version = "0.5.6",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)
